# qt

./: .gitignore  CMakeLists.txt  background.js  content.js  highlight.css  main.cpp  manifest.json  mingw-toolchain.cmake  popup.html  popup.js
.devcontainer/: devcontainer.json
.github/workflows/: agent.yml  build.yml  dll.yml  gammaray.yml  qt.yml
qml/: CMakeLists.txt  main.cpp  qml.qrc
qml/ui/: Main.qml
qt_webchannel_proxy_sdk/: CMakeLists.txt
qt_webchannel_proxy_sdk/include/: UiAutomationProxyServer.h
qt_webchannel_proxy_sdk/src/: UiAutomationProxyServer.cpp  UiAutomationProxyServerQml.cpp
version/: CMakeLists.txt  main.cpp
webchannel_proxy/: CMakeLists.txt
webchannel_proxy/include/: UiAutomationProxyServer.h  UiQMLQuery.h
webchannel_proxy/src/: QtGenericUiAutomationHandler.cpp  QtQmlUiAutomationHandler.cpp  UiAutomationProxyServer.cpp  UiQMLQuery.cpp
widgets/: CMakeLists.txt
